test: 어드민은 메인 카테고리가 존재한다면 서브 카테고리를 생성할 수 있다